...
              shape: RoundedRectangleBorder(
                borderRadius: BorderRadius.circular(20),
                side: BorderSide(color: Colors.white.withValues(alpha: 0.1)),
              ),
              title: Center(
                child: Text(
                  'STRUK DIGITAL',
                  style: _plusJakarta(
                    fontSize: 16,
                    fontWeight: FontWeight.bold,
                    letterSpacing: 1,
                  ),
                ),
...
                            ),
                          ),
                          items: [
                            DropdownMenuItem<String>(
                              value: null,
                              child: Text(
                                'Semua Saluran',
                                overflow: TextOverflow.ellipsis,
                                style: _plusJakarta(fontSize: 13),
                              ),
                            ),
                            DropdownMenuItem<String>(
                              value: 'offline',
                              child: Text(
                                'Offline (Toko)',
                                overflow: TextOverflow.ellipsis,
                                style: _plusJakarta(fontSize: 13),
                              ),
                            ),
                            DropdownMenuItem<String>(
                              value: 'online',
...
