appId: com.example.frontendd
---
# TC-038 | POS – Bayar kurang (insufficient)
# Memastikan error muncul saat bayar kurang dari total

- launchApp
- runFlow:
    file: "login_kasir.yaml"
- waitForAnimationToEnd
- assertVisible:
    id: "___WAIT_FOR_PRODUCTS___"
    optional: true
- tapOn: "Tomodachi Cat Food Tuna 1kg\nSKU: CAT-FOOD-TUNA-1KG\nRp 55.000\nStok: 772"
- tapOn: ".*Item - Rp.*"
- tapOn: "Tunai"
- tapOn: "Nominal Bayar (Rp)"
- inputText: "1"
- tapOn: "BAYAR SEKARANG"
- assertVisible: "Insufficient paid amount."
- takeScreenshot: "38_pos_bayar_kurang"



